# lithft

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: README_CN.md
launch/: finetune.py
litgpt/: args.py
litgpt/data/: __init__.py  paired_packed_dataset.py  parquet_sft_data.py
lithft/launch/: pretrain.py
lithft/litgpt/: utils.py
lithft/litgpt/data/: packed_dataset.py
lithft/litgpt/scripts/: convert_hf_fast.py
scripts/: __init__.py  prepare_packed_data.py
